--- a/package.json
+++ b/package.json
@@ -1,28 +1,36 @@
 {
-  "name": "weather-mcp",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "scripts": {
-    "dev": "nodemon --exec 'ts-node' src/server.ts",
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.11.3",
-    "axios": "^1.9.0",
-    "dotenv": "^16.5.0",
-    "express": "^4.21.2",
-    "nodemon": "^2.0.22",
-    "zod": "^3.24.4"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.17",
-    "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
-  }
+    "name": "weather-mcp",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "scripts": {
+        "dev": "nodemon --exec 'ts-node' src/server.ts",
+        "build:robust": "ts-node build.ts current",
+        "build:robust:all": "ts-node build.ts all",
+        "build:debug": "ts-node debug-build.ts",
+        "build:debug:all": "ts-node debug-build.ts all",
+        "build:fixed": "ts-node fixed-build.ts",
+        "build:fixed:all": "ts-node fixed-build.ts all",
+        "build:clean": "rm -rf ./dist && rm -rf ./.nexe-temp",
+        "start": "node dist/app-linux",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "dependencies": {
+        "@modelcontextprotocol/sdk": "^1.11.3",
+        "axios": "^1.9.0",
+        "dotenv": "^16.5.0",
+        "express": "^4.21.2",
+        "nodemon": "^2.0.22",
+        "zod": "^3.24.4"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.17",
+        "nexe": "^5.0.0-beta.4",
+        "nodemon": "^2.0.20",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.9.5"
+    }
 }
