--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "weather-mcp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/server.js",
+  "scripts": {
+    "build": "tsc",
+    "dev": "ts-node src/server.ts",
+    "start": "node dist/server.js",
+    "package": "npm run build && pkg dist/server.js --targets node16-win-x64 --output dist/pkg-weather-mcp.exe"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "scripts": {
-    "dev": "nodemon --exec 'ts-node' src/server.ts",
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.11.3",
+    "@modelcontextprotocol/sdk": "^1.12.1",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
@@ -24,5 +25,13 @@
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "pkg": {
+    "assets": [
+      "node_modules/@modelcontextprotocol/sdk/**/*"
+    ],
+    "scripts": [
+      "node_modules/@modelcontextprotocol/sdk/**/*"
+    ]
   }
 }
