--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "bundle":   "ncc build dist/server.js -o build",
-    "package":  "npm run build && npm run bundle && pkg build/index.js --target node16-win-x64 --output dist/weather-mcp.exe"
+    "package":  "npm run build && npm run bundle && pkg build/index.js --targets node16-win-x64,node16-macos-arm64 --output dist/weather-mcp"
   },
   "keywords": [],
   "author": "",
